<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">@string/platform_name</string>
    <string name="app_shortcut_name" translatable="false">@string/shortcut_name</string>
    <string name="phonetic_app_name" translatable="false">@string/phonetic_platform_name</string>
    <string name="course_details_congratulations">Congratulations!</string>
    <string name="course_details_earned_cert">You’ve passed the course.</string>
    <string name="course_details_view_cert_button">View Certificate</string>
    <string name="enroll_now_button_text">Enroll now</string>
    <string name="invitation_only_button_text" tools:ignore="MissingTranslation">Invitation only</string>
    <string name="effort_field_name">Effort:</string>
    <string name="go_to_video">Go to video</string>
    <string name="view_course_button_text">View course</string>
    <string name="you_are_now_enrolled">You are now enrolled in this course.</string>
    <string name="cannot_show_dashboard">Unable to show dashboard.</string>
    <string name="cannot_open_url" tools:ignore="MissingTranslation">Unable to open web page.</string>
    <string name="browse_by_subject" tools:ignore="MissingTranslation">Browse by Subject</string>
    <string name="view_all_subjects" tools:ignore="MissingTranslation">View All Subjects</string>
    <string name="search_subjects" tools:ignore="MissingTranslation">Search Subject</string>
    <string name="media_route_menu_title" tools:ignore="MissingTranslation">Play on&#8230;</string>
    <string name="introducing_cast_text" tools:ignore="MissingTranslation">Introducing Cast</string>
    <string name="remote_device_casting_message" tools:ignore="MissingTranslation">Video is casting to remote device</string>
    <string name="share_course_button">Share your course</string>
    <string name="share_course_message">I’m taking a course on {platform_name}! Check it out:</string>
    <string name="settings_wifi_top">Wi-Fi only download</string>
    <string name="settings_wifi_bottom">Only download content when Wi-Fi is turned on</string>
    <string name="settings_download_to_sdcard_title" tools:ignore="MissingTranslation">Download Video to SD Card</string>
    <string name="settings_download_to_sdcard_subtitle" tools:ignore="MissingTranslation">Videos will be downloaded to the SD Card if available</string>
    <string name="share_certificate_button">Share your certificate</string>
    <string name="share_certificate_message">I just earned a Certificate on {platform_name}! Check it out: {certificate_url}</string>
    <string name="tab_label_certificate">Certificate</string>
    <string name="need_data">This feature requires an active Internet connection.</string>
    <string name="email_username">User name or e-mail address</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Sign In</string>
    <string name="login_btn">Sign in button</string>
    <string name="progress_text">Please wait</string>
    <string name="signing_in">Signing In</string>
    <string name="error_message">Error Message</string>
    <string name="error_heading">The following error occurred while logging you in</string>
    <string name="login_failed">Please make sure that your user name or e-mail address and password are correct and try again.</string>
    <string name="by_creating_account" tools:ignore="MissingTranslation">By creating an account, you agree to the {license} and {tos_and_honor_code} and you acknowledge that {platform_name} and each Member process your personal data in accordance with the {privacy_policy}</string>
    <string name="by_signing_in" tools:ignore="MissingTranslation">By signing in to this app, you agree to the {license} and {tos_and_honor_code} and you acknowledge that {platform_name} and each Member process your personal data in accordance with the {privacy_policy}</string>
    <string name="licensing_agreement" tools:ignore="MissingTranslation">{platform_name} End User License Agreement</string>
    <string name="tos_and_honor_code" tools:ignore="MissingTranslation">{platform_name} Terms of Service and Honor Code</string>
    <string name="privacy_policy" tools:ignore="MissingTranslation">Privacy Policy</string>
    <string name="login_title">Sign In</string>
    <string name="close">Close</string>
    <string name="dropdown_list_prefix">Dropdown list.</string>
    <string name="label_current_downloads" tools:ignore="MissingTranslation">View current downloads</string>
    <string name="open_profile_button">Open your profile</string>
    <string name="label_my_courses" tools:ignore="MissingTranslation">Courses</string>
    <string name="label_my_programs" tools:ignore="MissingTranslation">Programs</string>
    <string name="label_find_courses">Find Courses</string>
    <string name="label_discover" tools:ignore="MissingTranslation">Discover</string>
    <string name="label_degrees" tools:ignore="MissingTranslation">Degrees</string>
    <string name="label_discovery" tools:ignore="MissingTranslation">Discovery</string>
    <string name="label_submit_feedback">Submit Feedback</string>
    <string name="toggle_turn_on">On</string>
    <string name="toggle_turn_off">Off</string>
    <string name="logout">Logout</string>
    <string name="settings_txt">Settings</string>
    <string name="label_version">App Version</string>
    <string name="label_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="title_account" tools:ignore="MissingTranslation">Account</string>
    <string name="confirm_dialog_title_help">Reset Password</string>
    <string name="success_dialog_title_help">Password reset e-mail sent</string>
    <string name="title_reset_password_failed">Reset Password Error</string>
    <string name="wifi_dialog_title_help">Allow cellular download</string>
    <string name="success_dialog_message_help">We’ve sent a message with password reset instructions to your e-mail address. 
        If you don’t see it in the next few minutes, make sure to check your spam folder.</string>
    <string name="confirm_dialog_message_help">Enter the e-mail address for your account, and we’ll send you instructions to reset your password.</string>
    <string name="wifi_dialog_message_help">Allow your device to download videos over your cellular connection when Wi-Fi is not available. Data charges may apply.</string>
    <plurals name="delete_video_snackbar_msg">
        <item quantity="one">%s video deleted</item>
        <item quantity="other">%s videos deleted</item>
    </plurals>
    <string name="leaving_app_data_title">Leaving the {platform_name} App</string>
    <string name="leaving_app_data_message">If you leave the app, you will no longer be viewing free {platform_name} content. Data charges may apply.</string>
    <string name="end_user_title" tools:ignore="MissingTranslation">End User License Agreement</string>
    <string name="privacy_policy_title" translatable="false">@string/privacy_policy</string>
    <string name="terms_of_service_title" tools:ignore="MissingTranslation">Terms of Service</string>
    <string name="courseware_title">Course</string>
    <string name="courseware_subtitle">Access videos and assignments</string>
    <string name="videos_title" tools:ignore="MissingTranslation">Videos</string>
    <string name="videos_subtitle" tools:ignore="MissingTranslation">Watch course videos</string>
    <string name="discussion_title">Discussion</string>
    <string name="discussion_subtitle">Join the conversation</string>
    <string name="handouts_title">Handouts</string>
    <string name="handouts_subtitle">Find important course information</string>
    <string name="announcement_title">Announcements</string>
    <string name="course_dates_title" tools:ignore="MissingTranslation">Important Dates</string>
    <string name="resources_title" tools:ignore="MissingTranslation">Resources</string>
    <string name="announcement_subtitle">Keep up with the latest news</string>
    <string name="course_dates_subtitle" tools:ignore="MissingTranslation">Keep track of deadlines and stay on track</string>
    <string name="course_name">Course Name</string>
    <string name="new_course_content">New Course Content</string>
    <string name="label_starting" tools:ignore="MissingTranslation">Starting {date}</string>
    <string name="label_ended" tools:ignore="MissingTranslation">Ended {date}</string>
    <string name="label_ending" tools:ignore="MissingTranslation">Ending {date}</string>
    <string name="label_expires" tools:ignore="MissingTranslation">Course access expires {date}</string>
    <string name="label_expires_on" tools:ignore="MissingTranslation">Course access expires on {date}</string>
    <string name="label_expired" tools:ignore="MissingTranslation">Course access expired {date}</string>
    <string name="label_expired_on" tools:ignore="MissingTranslation">Course access expired on {date}</string>
    <string name="course_content">Course Content</string>
    <string name="tab_label_handouts">Handouts</string>
    <string name="last_accessed">Last Accessed</string>
    <string name="no_chapter_text">No course content is currently available.</string>
    <string name="no_videos_text" tools:ignore="MissingTranslation">This course does not include any videos.</string>
    <string name="no_courses_to_display">It looks like you are not enrolled in any courses yet.</string>
    <string name="no_announcements_to_display">There are currently no announcements for this course.</string>
    <string name="no_handouts_to_display">There are currently no handouts for this course.</string>
    <string name="no_course_dates_to_display" tools:ignore="MissingTranslation">Course dates are not currently available.</string>
    <string name="delete_videos_title" tools:ignore="MissingTranslation">Delete Videos</string>
    <string name="due_date_today" tools:ignore="MissingTranslation">due today at {due_date}</string>
    <string name="due_date_past_future" tools:ignore="MissingTranslation">due {due_date}</string>
    <string name="upgrade_banner_description" tools:ignore="MissingTranslation">Complete assessments on the go toward a certificate!</string>
    <string name="upgrade_to_verified_today_title" tools:ignore="MissingTranslation">Upgrade to Verified Today</string>
    <string name="place_order_title" tools:ignore="MissingTranslation">Place Order</string>
    <string name="payments_info_header" tools:ignore="MissingTranslation">Pursue a Verified Certificate!</string>
    <string name="payments_info_details" tools:ignore="MissingTranslation">Highlight your new knowledge and skills with a verified certificate.\n\nUse this valuable credential to improve your job prospects and advance your career, or highlight your certificate in school applications.</string>
    <string name="audit_access_expires_on" tools:ignore="MissingTranslation">Audit Access Expires {date}</string>
    <string name="audit_access_expires_details" tools:ignore="MissingTranslation">You loose all course access, including your progress, on {expiry_date}.\n\nUpgrade by {upgrade_by} to get unlimited access to the course as long as it exists on the site.</string>
    <string name="locked_content_header" tools:ignore="MissingTranslation">Available to verified learners!</string>
    <string name="locked_content_details" tools:ignore="MissingTranslation">Graded assessments are available to Verified Track Learners. Upgrade below to unlock.</string>
    <string name="discussion_topics_title">Discussion topics</string>
    <string name="topics_search">Search all posts</string>
    <string name="discussion_posts_search_title">Search results</string>
    <string name="discussion_posts_refine">Refine:</string>
    <string name="discussion_post_create_new_post">Create a new post</string>
</resources>