<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aa0075B4"
            android:paddingStart="@dimen/edx_margin"
            android:paddingTop="@dimen/edx_margin"
            android:paddingBottom="@dimen/edx_margin">

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="@dimen/fa_xxxx_large"
                android:layout_height="@dimen/fa_xxxx_large"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/edx_margin"
                android:background="@drawable/selectable_box_overlay"
                android:contentDescription="@string/close"
                android:padding="@dimen/widget_margin"
                android:src="@drawable/ic_close"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_header"
                style="@style/bold_white_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/payments_info_header"
                android:textSize="@dimen/edx_large"
                app:layout_constraintBottom_toBottomOf="@+id/btn_close"
                app:layout_constraintEnd_toStartOf="@+id/btn_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_close" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edx_double_margin"
                android:layout_marginEnd="@dimen/edx_margin"
                android:text="@string/payments_info_details"
                android:textColor="@color/white"
                android:textSize="@dimen/edx_base"
                app:layout_constraintEnd_toStartOf="@id/certificate_slice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_close" />

            <ImageView
                android:id="@+id/certificate_slice"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/edx_margin"
                android:background="@drawable/ic_new_cert"
                android:contentDescription="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_close" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/edx_margin">

            <TextView
                android:id="@+id/tv_audit_access_expires_on"
                style="@style/bold_regular_edx_black_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audit_access_expires_on"
                android:textSize="@dimen/edx_large" />

            <TextView
                android:id="@+id/tv_audit_access_expires_details"
                style="@style/regular_edx_black_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edx_double_margin"
                android:text="@string/audit_access_expires_details"
                android:textSize="@dimen/edx_base" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="150dp"
            tools:background="@color/edx_success_accent"/>

    </LinearLayout>
</layout>
